PharmaDemo/src/objects/Price_List_SKUs__c.object
<CustomObject>
    <fields>
        <fullName>Price_List__c</fullName>
        <label>Price List</label>
        <referenceTo>Price_List__c</referenceTo>
        <relationshipLabel>Price List SKUs</relationshipLabel>
        <relationshipName>Price_List_SKUs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <referenceTo>SKU__c</referenceTo>
        <relationshipName>Price_Lists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Price List SKU</label>
    <nameField>
        <displayFormat>PLSN-{0000}</displayFormat>
        <label>Price List SKU Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price List SKUs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>